<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CE</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="tab1">設計工程</string>
    <string name="tab2">工程專案</string>
    <string name="tab3">檔案管理</string>
    <!-- Pojecet -->
    <string name="Construction">施工中</string>
    <string name="Preparation">籌備中</string>
    <string name="Closed">結案</string>
    <!-- menu/sele_project.xml -->
    <string name="msp_logout">登出</string>

    <!-- menu/pic_tabhost.xml -->
    <string name="msp_camera">照相</string>
    <string name="msp_upload">上傳</string>
    <string name="msp_remove">刪除</string>
    <!-- 登入 -->
    <string name="account">帳號:</string>
    <string name="passwd">密碼:</string>
    <!-- 首頁 -->
    <string name="proclamation">公告</string>
    <string name="project">專案</string>
    <string name="more1">更多公告</string>
    <string name="more2">更多專案</string>
    <string name="more3">更多瀏覽</string>
    <string name="projecttitle">專案標題</string>
    <string name="location">地點:</string>
    <string name="status">狀態:</string>
    <string name="recently">近期瀏覽</string>
    <!-- 公告 -->
    <string name="announcement">公告</string>
    <!-- 選單 -->
    <string name="changeaccount">切換帳號</string>
    <string name="personnelmanagement">人事管理</string>
    <string name="sharingfile">共享檔案</string>
    <string name="signout">登出</string>

</resources>