<?xml version="1.0"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/announcement_layout"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/proclamation"
            android:textSize="40sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="25dp"
            android:background="@drawable/buttonmore" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/announcement_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="20dp" >

        <TextView
            android:id="@+id/textViewannouncement1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="將在2月15日舉辦尾牙"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewannouncement1"
            android:layout_alignParentRight="true"
            android:text="1月2日"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textViewannouncement2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewannouncement1"
            android:text="即將有新的標案"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewannouncement2"
            android:layout_alignParentRight="true"
            android:text="1月1日"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textViewannouncement3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewannouncement2"
            android:text="董事長女兒在12月10號要出嫁"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewannouncement3"
            android:layout_alignParentRight="true"
            android:text="11月20日"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textViewannouncement4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewannouncement3"
            android:text="發薪日"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewannouncement4"
            android:layout_alignParentRight="true"
            android:text="11月15日"
            android:textSize="25sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/project"
            android:textSize="40sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="25dp"
            android:background="@drawable/buttonmore" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >

        <GridView
            android:id="@+id/GridView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:columnWidth="10dp"
            android:horizontalSpacing="1dp"
            android:numColumns="2"
            android:stretchMode="columnWidth"
            android:verticalSpacing="1dp" >
        </GridView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
         >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/recently"
            android:textSize="40sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="25dp"
            android:background="@drawable/buttonmore" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >

        <GridView
            android:id="@+id/GridView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:columnWidth="10dp"
            android:horizontalSpacing="1dp"
            android:numColumns="2"
            android:stretchMode="columnWidth"
            android:verticalSpacing="1dp" >
        </GridView>
    </RelativeLayout>

</LinearLayout>